[tool.poetry]
name = "engawa"
version = "0.1.0"
description = "Japanese Preprocessing Tool for Machine Learning"
authors = ["sea-turt1e"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fugashi = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
